# project-kalefail

./: .env.example  .gitignore  Cargo.toml  eslint.config.js  initialize.js  package.json  pnpm-lock.yaml  snapshot.json  svelte.config.js  tailwind.config.ts
contracts/kale_salad/: Cargo.toml
contracts/kale_salad/src/: constants.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs  utils.rs
contracts/kale_salad/src/test/: approve.rs  approve_all.rs  burn.rs  burn_from.rs  constructor.rs  enumerable.rs  metadata.rs  mint.rs  test_fixture.rs  transfer.rs  transfer_from.rs
contracts/kale_salad/src/tests/: approve.rs  approve_all.rs  burn.rs  constructor.rs  enumerable.rs  metadata.rs  mint.rs  mod.rs  test_fixture.rs  transfer_from.rs
contracts/kale_salad/test_snapshots/test/approve/: test_approve.1.json  test_approve_to_remove.1.json  test_cannot_approve_owner.1.json  test_cannot_approve_unminted_token.1.json  test_cannot_approve_unowned_token.1.json  test_cannot_approve_with_expired_approval.1.json  test_expired_approval.1.json
contracts/kale_salad/test_snapshots/test/approve_all/: test_approve_all.1.json  test_cannot_approve_all_owner.1.json  test_cannot_approve_all_with_expired_approval.1.json  test_expired_approval.1.json
contracts/kale_salad/test_snapshots/test/burn/: test_burn.1.json  test_cannot_burn_unminted_token.1.json  test_cannot_burn_unowned_token.1.json
contracts/kale_salad/test_snapshots/test/burn_from/: test_burn_from.1.json  test_burn_from_approved_all.1.json  test_cannot_burn_from_unminted_tokens.1.json  (+3 more)
scripts/: deploy-sacs.sh  (+1 more)
(+160 files in other folders)
