[workspace]
resolver = "2"
members = [
  "contracts/trading_post",
  "contracts/kale_salad",
  "contracts/kitchen",
  "contracts/kale_tractor",
  "contracts/playground",
]

[workspace.dependencies]
soroban-sdk = "22.0.7"
soroban-nft-interface = { path = "contracts/nft_interface" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
